[package]
edition = "2024"
name = "obd-rust"
version = "0.1.0"

[[bin]]
name = "obd-rust"
path = "./src/bin/main.rs"

[dependencies]
# ESP Ecosystem
esp-hal = { git = "https://github.com/esp-rs/esp-hal", features = ["defmt", "esp32c3", "unstable"] }
esp-rtos = { git = "https://github.com/esp-rs/esp-hal", package = "esp-rtos", features = ["defmt", "embassy", "esp-alloc", "esp-radio", "esp32c3"] }
esp-radio = { git = "https://github.com/esp-rs/esp-hal", package = "esp-radio", features = ["esp32c3", "ble", "defmt", "unstable"] }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", package = "esp-alloc", features = ["defmt"] }

# esp-bootloader-esp-idf = "0.4"

# Embassy
embassy-executor = { version = "0.9.1" } 
embassy-time = "0.5.0" 
embassy-sync = "0.7.2" 
embassy-futures = "0.1.2" 

# Bluetooth Stack
trouble-host = { version = "0.6.0", features = ["defmt", "peripheral", "gatt", "derive", "default-packet-pool", "security"] }
bt-hci = "0.8.0"

# Hardware Abstractions
embedded-io-async = "0.7.0"
embedded-io = "0.7.1"
embedded-can = "0.4.1"

# Serde core
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
automotive_diag = { version = "0.1", default-features = false, features = ["serde", "obd2"] }

# Logging
defmt = "1.0.1"
defmt-rtt = "0.4.1"
esp-backtrace = { version = "0.18.1", features = ["esp32c3", "panic-handler", "defmt"] }

# Memory
heapless = { version = "0.9.2", features = ["portable-atomic", "serde"] }
portable-atomic = { version = "1.13.1", default-features = false }
static_cell = "2.1.1"

# [patch."https://github.com/esp-rs/esp-hal"]
# esp-hal = { path = "/home/j-said/cloned-repoes/esp-hal/esp-hal" }
# esp-sync = { path = "/home/j-said/cloned-repoes/esp-hal/esp-sync" }
# esp-radio = { path = "/home/j-said/cloned-repoes/esp-hal/esp-radio" }
# esp-rtos = { path = "/home/j-said/cloned-repoes/esp-hal/esp-rtos" }
# esp-alloc = { path = "/home/j-said/cloned-repoes/esp-hal/esp-alloc" }
# esp-rom-sys = { path = "/home/j-said/cloned-repoes/esp-hal/esp-rom-sys" }
# esp-config = { path = "/home/j-said/cloned-repoes/esp-hal/esp-config" }
# esp-metadata-generated = { path = "/home/j-said/cloned-repoes/esp-hal/esp-metadata-generated" }
# esp-riscv-rt = { path = "/home/j-said/cloned-repoes/esp-hal/esp-riscv-rt" }
# esp-hal-procmacros = { path = "/home/j-said/cloned-repoes/esp-hal/esp-hal-procmacros" }

[profile.release]
codegen-units = 1
lto = 'fat'
opt-level = 's'
debug = 2